add a side menu just for app info like version...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,18 @@
 name: dice_app2
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1
 
 environment:
   sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
+  url_launcher: ^6.1.10
   shake: ^2.2.0
   provider: ^6.0.5
   flutter:
     sdk: flutter
+    
 
 dev_dependencies:
   flutter_test:
