--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dice_app2
 description: A new Flutter project.
 publish_to: 'none'
-version: 0.1.1
+version: 0.1.1+2
 
 environment:
   sdk: '>=2.19.4 <3.0.0'
